@@ -1,5 +1,14 @@
 2006-02-19  Han-Wen Nienhuys  <hanwen@xs4all.nl>
 
+	* lily/tie-formatting-problem.cc (set_chord_outline): put dots
+	in outline too.  
+	(generate_configuration): for small ties, also look for collisions
+	at Y + DIR*h + DELTA_Y.
+	(get_variations): consider variation for dot positions too.
+
+	* lily/side-position-interface.cc (aligned_side): take abs for
+	quantized rounded position. Fixes tenuto below staff.
+
 	* scm/stencil.scm (annotate-y-interval): robustify: print nan/inf
 	markers when necessary.
 
